# Touhou11

./: .gitignore  AnmLoaded.cpp  AnmLoaded.h  AnmManager.cpp  AnmManager.h  AnmVm.cpp  AnmVm.h  AsciiManager.h  Bullet.h  CMakeLists.txt  CStreamingSound.h  Camera.h  Chain.cpp  Chireiden.ChildProcessDbgSettings  Chireiden.h  Chireiden.sln  Chireiden.vcxproj  Chireiden.vcxproj.filters  Ending.h  Enemy.h  FileAbstrction.h  GameConfig.cpp  GameConfig.h  GameThread.h  Gui.h  Interp.h  LaserLine.h  LaserManager.cpp  Macros.h  Player.h  README.md  RenderMesh.cpp  RenderMesh.h  Spellcard.h  Supervisor.cpp  Symbols.asm  Timer.cpp  Timer.h  ZunResult.h  launch.vs.json
core/: CMakeLists.txt  symbols.asm
core/include/: AnmId.h  AnmLoaded.h  AnmManager.h  AnmVm.h  AnmVmList.h  AsciiManager.h  Bomb.h  Bullet.h  BulletManager.h  CSound.h  CStreamingSound.h  CWaveFile.h  Camera.h  Chain.h  Chireiden.h  DebugGui.h  DistortionMesh.h  EclVm.h  Effect.h  EffectManager.h  Ending.h  Enemy.h  GameConfig.h  Globals.h  Interp.h  Item.h  ItemManager.h  LaserData.h  LaserLine.h  LaserManager.h  LaserSegment.h  LoadingThread.h  Lzss.h  Macros.h  PauseMenu.h  Player.h  RenderVertex.h  Rng.h  Score.h  ScoreManager.h  (+10 more)
core/src/: AnmLoaded.cpp  AnmManager.cpp  AnmVm.cpp  AsciiManager.cpp  Bomb.cpp  Bullet.cpp  CSound.cpp  CStreamingSound.cpp  CWaveFile.cpp  Chain.cpp  Chireiden.cpp  DebugGui.cpp  DistortionMesh.cpp  EclVm.cpp  EnemyManager.cpp  FileAbstraction.cpp  GameConfig.cpp  Globals.cpp  Interp.cpp  Player.cpp  ScoreManager.cpp  SoundManager.cpp  StdVm.cpp  Supervisor.cpp  Symbols.asm  Timer.cpp  Window.cpp  d3d9.def  main.cpp
include/: AnmId.h  AnmLoaded.h  AnmManager.h  AnmVm.h  AnmVmList.h  AsciiManager.h  Bomb.h  Bullet.h  BulletManager.h  CSound.h  CStreamingSound.h  CWaveFile.h  Camera.h  Chain.h  Chireiden.h  DebugGui.h  DistortionMesh.h  EclVm.h  Effect.h  EffectManager.h  Ending.h  EnemyManager.h  FileAbstraction.h  FileAbstrction.h  FpsCounter.h  GameConfig.h  Globals.h  HintManager.h  Interp.h  Item.h  ItemManager.h  LaserData.h  LaserInfinite.h  Lzss.h  Macros.h  MainMenu.h  MsgVm.h  RenderVertex.h  ReplayManager.h  Rng.h  (+8 more)
resources/: AnmVmDump.s  AnmVmMisc.txt
resources/ghidra/Th11.rep/: project.prp  projectState
resources/ghidra/Th11.rep/idata/00/: 00000000.prp  00000002.prp  00000003.prp  00000005.prp  00000006.prp  (+1 more)
src/: AnmLoaded.cpp  AnmManager.cpp  AnmVm.cpp  AsciiManager.cpp  BulletManager.cpp  Chain.cpp  Chireiden.cpp  DebugGui.cpp  DistortionMesh.cpp  EffectManager.cpp  FileAbstraction.cpp  GameConfig.cpp  Globals.cpp  Interp.cpp  Lzss.cpp  MsgVm.cpp  SoundManager.cpp  StdVm.cpp  Supervisor.cpp  Timer.cpp  Window.cpp
(+18 files in other folders)
